# dataq-to-influxdb

./: DI808_config.yaml  README.md  Startup_bash  Startup_lxterminal  config.py  connection_test.py  dataq-to-influxdb.conf  main.py  pyproject.toml  test_connection.py
